--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -13,33 +13,42 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="250dp"
-        android:layout_height="112dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="392dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Username"
         android:textColor="@color/white"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/prova"
-        tools:layout_editor_absoluteX="80dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Disconetti"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prova" />
 
     <Button
         android:id="@+id/Disconetti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="33dp"
         android:backgroundTint="@android:color/white"
         android:text="Disconnect"
         android:textColor="@color/green"
         android:textSize="16dp"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="650dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/prova"
         android:layout_width="250dp"
-        android:layout_height="112dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="34dp"
         android:src="@drawable/account"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="34dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
