--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -121,5 +121,5 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Registrazione" />
-
+<!--sSs-->
 </androidx.constraintlayout.widget.ConstraintLayout>
