--- a/app/src/main/res/layout/cardperc.xml
+++ b/app/src/main/res/layout/cardperc.xml
@@ -86,8 +86,8 @@ IL + E - VENGONO NASCOSTI
             android:layout_marginTop="68dp"
             android:layout_marginEnd="79dp"
             android:backgroundTint="@color/green"
-            android:textColor="@color/white"
-            android:text="+" />
+            android:text="+"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/ID"
