--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -15,7 +15,7 @@
         android:layout_width="250dp"
         android:layout_height="0dp"
         android:layout_marginBottom="392dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/oceanwide_semibold"
         android:gravity="center"
         android:text="Username"
         android:textColor="@color/white"
@@ -33,6 +33,7 @@
         android:layout_marginBottom="33dp"
         android:backgroundTint="@android:color/white"
         android:text="Disconnect"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textColor="@color/green"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
