--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -9,88 +9,84 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="103dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="450dp"
+        android:layout_width="340dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="52dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Login to your Account"
         android:textColor="@color/white"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Registra"
+        android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/UtenteBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="36dp"
         android:background="#30ffffff"
-        android:backgroundTint="@android:color/white"
         android:drawableLeft="@drawable/ic_person"
-        android:drawablePadding="5dp"
-        android:hint="Utente"
-        android:inputType="textEmailAddress"
+        android:drawablePadding="6dp"
+        android:fontFamily="@font/oceanwide_semibold"
+        android:hint="Username"
         android:padding="10dp"
         android:textColorHint="@color/white"
         android:textSize="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/PasswordBox"
-        app:layout_constraintEnd_toEndOf="@+id/PasswordBox"
-        app:layout_constraintStart_toStartOf="@+id/PasswordBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
         android:id="@+id/PasswordBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
         android:background="#30ffffff"
         android:backgroundTint="@android:color/white"
         android:drawableLeft="@drawable/ic_info"
         android:drawablePadding="5dp"
         android:ems="10"
+        android:fontFamily="@font/oceanwide_semibold"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColorHint="@color/white"
         android:textSize="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/Login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/UtenteBox"
         app:passwordToggleEnabled="true" />
 
     <Button
         android:id="@+id/Login"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
         android:backgroundTint="@color/green"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Sing in"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/Errori"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PasswordBox" />
 
     <TextView
         android:id="@+id/Errori"
-        android:layout_width="wrap_content"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="171dp"
-        android:textColor="@color/white"
-        android:textSize="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/oceanwide_semibold"
+        android:textAlignment="center"
+        android:textColor="#FF5252"
+        android:textSize="12dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Login" />
 
@@ -98,28 +94,25 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Don't have an account? "
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Registra"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Errori" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/Registra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
+        android:layout_marginStart="4dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Sing up"
         android:textColor="@color/green"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/textView2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
