--- a/app/src/main/res/layout/private_map.xml
+++ b/app/src/main/res/layout/private_map.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="12dp"
         android:text="Private"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textColor="@color/white"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -52,6 +53,7 @@
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:text="Public"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textColor="#aaaaaa"
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
