--- a/app/src/main/res/layout/private_poi.xml
+++ b/app/src/main/res/layout/private_poi.xml
@@ -25,6 +25,7 @@
         android:textColor="@color/white"
         android:textSize="18dp"
         android:textStyle="bold"
+        android:fontFamily="@font/oceanwide_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/publicPOI" />
 
@@ -47,6 +48,7 @@
         android:layout_marginTop="24dp"
         android:clickable="true"
         android:text="Public"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textColor="#aaaaaa"
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
