--- a/app/src/main/res/layout/public_map.xml
+++ b/app/src/main/res/layout/public_map.xml
@@ -26,6 +26,7 @@
         android:text="Public"
         android:textColor="@color/white"
         android:textSize="18dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,6 +50,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="84dp"
         android:text="Private"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textColor="#aaaaaa"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
