--- a/app/src/main/res/layout/public_poi.xml
+++ b/app/src/main/res/layout/public_poi.xml
@@ -24,6 +24,7 @@
         android:text="Public"
         android:textColor="@color/white"
         android:textSize="18dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="85dp"
         android:text="Private"
+        android:fontFamily="@font/oceanwide_semibold"
         android:textColor="#aaaaaa"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
