--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -9,101 +9,94 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginBottom="472dp"
+        android:layout_width="340dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="52dp"
         android:text="Create your Account"
         android:textColor="@color/white"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/LoginReg"
+        android:textSize="45dp"
+        android:fontFamily="@font/oceanwide_semibold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/PasswordBoxReg"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
         android:background="#30ffffff"
         android:backgroundTint="@android:color/white"
         android:drawableLeft="@drawable/ic_info"
         android:drawablePadding="5dp"
         android:ems="10"
+        android:fontFamily="@font/oceanwide_semibold"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColorHint="@color/white"
         android:textSize="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/Registrazione"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailBox"
         app:passwordToggleEnabled="true" />
 
     <EditText
         android:id="@+id/EmailBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
         android:background="#30ffffff"
         android:backgroundTint="@android:color/white"
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="5dp"
         android:ems="10"
+        android:fontFamily="@font/oceanwide_semibold"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColorHint="@color/white"
         android:textSize="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/PasswordBoxReg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NomeBox" />
 
     <Button
         android:id="@+id/Registrazione"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="79dp"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="60dp"
         android:backgroundTint="@color/green"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Sign Up"
         android:textColor="@color/white"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/ErrorReg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PasswordBoxReg" />
 
     <EditText
         android:id="@+id/NomeBox"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="36dp"
         android:background="#30ffffff"
         android:backgroundTint="@android:color/white"
         android:drawableLeft="@drawable/ic_person"
         android:drawablePadding="5dp"
         android:ems="10"
-        android:hint="UserName"
+        android:fontFamily="@font/oceanwide_semibold"
+        android:hint="Username"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColorHint="@color/white"
         android:textSize="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/EmailBox"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -111,37 +104,37 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Don't have an account? "
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/LoginReg"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ErrorReg" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/LoginReg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="4dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text="Sing in"
         android:textColor="@color/green"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/ErrorReg"
-        android:layout_width="wrap_content"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="87dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/oceanwide_semibold"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:textColor="#FF5252"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Registrazione" />
     <!--sSs-->
