--- a/app/src/main/res/layout/public_poi.xml
+++ b/app/src/main/res/layout/public_poi.xml
@@ -5,7 +5,8 @@
     android:id="@+id/prova2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+     >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVCourse"
