--- a/app/src/main/res/layout/home_mappa.xml
+++ b/app/src/main/res/layout/home_mappa.xml
@@ -16,7 +16,9 @@
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toTopOf="parent"
-       />
+       >
+
+    </com.mapbox.mapboxsdk.maps.MapView>
 
     <ImageView
         android:id="@+id/imageView"
@@ -27,5 +29,16 @@
         mapbox:layout_constraintBottom_toBottomOf="parent"
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/centra"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+
+        android:src="@drawable/centro"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
